[package]
name = "pangu"
version = "0.1.0"
authors = ["Diego Garcia Gangl <diego@sinestesia.co>"]
edition = "2018"
publish = false
license = 'GPL-3.0-or-later'
description = 'Landscape generation library for Mirage'

[lib]
name = "pangu"
crate-type = ["cdylib"]

[dependencies]
noise = "0.5.1"
log="0.4"
simplelog = "0.5.3"
rand = "0.7"

[dependencies.pyo3]
version = "0.8.2"
features = ["extension-module"]

