[package]
name = "pangu"
version = "0.2.0"
authors = ["Diego Garcia Gangl <diego@sinestesia.co>"]
edition = "2018"
publish = false
license = 'GPL-3.0-or-later'
description = 'Landscape generation library for Mirage'

[lib]
name = "pangu"
crate-type = ["cdylib"]

[dependencies]
noise = "0.6.0"
simplelog = "0.7.5"
rand = "0.7"
resize = "0.4.0"


[dependencies.log]
version="0.4.8"
features = ["release_max_level_info"]

[dependencies.pyo3]
version = "0.9.2"
features = ["extension-module"]

