[package]
name = "pangu"
version = "0.2.0"
authors = ["Diego Garcia Gangl <diego@sinestesia.co>"]
edition = "2018"
publish = false
license = 'GPL-3.0-or-later'
description = 'Landscape generation library for Mirage'

[lib]
name = "pangu"
crate-type = ["cdylib"]

[dependencies]
noise = "0.7.0"
simplelog = "0.10.0"
rand = "0.8.3"
resize = "0.7.2"
rayon = "1.5"

[dependencies.log]
version="0.4.14"
features = ["release_max_level_info"]

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]

